made css selectors for body, header and image under header

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>They're Husbands</title>
     </head>
 
     <body>
         <header>
             <h1>This is a fan-made fan page</h1>
-            <p>Dedicated to all of our two husbands. Although Gojo would say it's mostly dedicated to him and he isn't wrong.</p>
-
+            <p>Dedicated to our two husbands. Although Gojo would say it's mostly dedicated to him and he isn't wrong.</p>
         </header>
-        <main></main>
-        <footer></footer>
+        <img src="assets/images/Gojo-and-Geto-smiling.jpeg" class="smile">
+        <main>
+        </main>
+        <footer>
+            <h2>Also dedicated with love and respect to 芥 あくた 見 み 下 げ 々 げ.</h2>
+        </footer>
     </body>
 
 </html>
