--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
             <h1>This is a fan-made fan page</h1>
             <p>Dedicated to our two husbands. Although Gojo would say it's mostly dedicated to him and he isn't wrong.</p>
         </header>
-        <img src="assets/images/Gojo-and-Geto-smiling.jpeg" class="smile">
+        <img class="smile" src="assets/images/Gojo-and-Geto-smiling.jpeg" alt="official anime art of characters Satoru Gojo and Suguru Geto laughing.">
         <main>
+            <div>
+                <section>
+                    <h2>Fan Artists</h2>
+                </section>
+                <section>
+                    <h2>A weeb's musings</h2>
+                </section>
+                <section>
+                    <h2>Honorable Mentions</h2>
+                    <p>As much as Gojo would like to believe-it's not actually all about him.</p>
+                </section>
+            </div>
         </main>
         <footer>
             <h2>Also dedicated with love and respect to 芥 あくた 見 み 下 げ 々 げ.</h2>
